added picture and Title name and started on css styling

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
        <title>Survay</title> 
     </head>
 <body>
         <header>
-            <section class="title-text">
-                <h1 id="title">Survay</h1>
-            
+            <div class="header">
 
-            </section>
+                <img class="img" src="Assets/Img/Green Logo.png" alt="logo">
+                <br> <br>
+                <section class="title-text">
+                    <h1 id="title">JOHNSON ELEMENTARY SCHOOL <br> WHOLE SITE MODERNIZATION <br> ROOM/SPACE NEEDS QUESTIONNAIRE</h1>
+                </section>
+            </div>
+            <br> <br>
+            <p>In preparation for our meeting to discuss current and future needs for your 
+                room/space, please take a few minutes to complete the following questionnaire 
+                and bring a completed copy to the meeting. You will have the opportunity to 
+                discuss items below with the team while we are together, this is just a starting point 
+                to help start documenting the assessment of your space. </p>
         </header>
 
 <main> <br> <br>
